added carosel in about me page

--- a/index.html
+++ b/index.html
@@ -108,26 +108,58 @@
           in order to understand why certain zeolite phases and zeolite compositions are experimentally observed.
           My previous experience has been centered on developing modules to evaluate entropic contributions to the 
           free energy of adsorbates on metal surfaces, and benchmarking post-Hartree Fock and Density Functional Theory
-          methods in transition metal complexes. </p>
-
-        
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis molestias eaque.</p>
-
+          methods in transition metal complexes. </p>        
 
         <!-- ------------------------------------------------------------------------>
         <!-- Delete this section below if you don't want a read more section -------->
         <div id="read-more">
 
-          <p>Ancillary info here.</p>
+          <p>Beyond my duties as a graduate research student, I am passionate about teaching and pedagogy. In 2021,
+            I was award a fellowship at the University of Notre Dame for the Navari Family Center for Digital Scholarship (NFCDS).
+            The NFCDS leverages state-of-the art technologies, enabling students and faculty to explore new methodologies, 
+            analyze complex data and share research results in ways never before possible. During my tenure as a NFCDS fellow,
+            I designed and facillitated workshops open to students, faculty, and staff at the University of
+            Notre Dame.
+          </p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis molestias eaque.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis molestias eaque.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis molestias eaque.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis molestias eaque.</p>
+          <div id="carousel-ID" class="carousel slide" data-ride="carousel" data-interval="20000">
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-ID" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-ID" data-slide-to="1"></li>
+            <li data-target="#carousel-ID" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white">Schneider Group Christmas Party</h5>
+                <p class="text-white">Dec 2021</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white">Schneider Group Christmas Party</h5>
+                <p class="text-white">Dec 2021</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./img/personal_img/WFS_July 2021.jpg" class="d-block w-100" alt="carousel image">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-white">Schneider Group Summer Party</h5>
+                <p class="text-white">July 2021</p>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carousel-ID" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-ID" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div> 
 
         </div>
 
