updated Research page

--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
   <!-- Main local styles -->
   <link rel="stylesheet" href="css/main.css">
 
-  <title>Jane Smith, PhD</title>
+  <title>Craig Waitt</title>
 
 </head>
 
@@ -58,10 +58,11 @@
 
       <div class="col-sm-12">
         <h1 id="page-lead">Research</h1>
-        <p>I conduct research in the area of...Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat, provident, cum corrupti maxime et modi dolore, vero, ipsam beatae accusamus nihil! Quidem temporibus, earum culpa ratione in
-          consectetur numquam minima!</p>
+        <p>My research focuses on atomistic simulations of heterogenous catalysis on metal surfaces and a class of metal organic frameworks called zeolites. I use Density Functional
+          Theory (DFT) and statistical mechanics in order to draw connections to and ellucidate experimental observations. 
+        </p>
 
-        <p>My specific research areas include:</p>
+        <!-- <p>My specific research areas include:</p>
 
         <div class="col-sm-12">
           <ul id="reseach-bullets">
@@ -70,25 +71,49 @@
             <li>Research area 3</li>
             <li>Research area 4</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- List of Research interests -->
 
         <!-- Publication -->
 
-        <h3><span>Select Publications</span></h3>
+        <h3><span>Publications</span></h3>
 
-        <h4>Journal Articles</h4>
+        <h4><strong>Journal Articles</strong></h4>
 
-        <ul class="journal-articles">
-          <li>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a>
+        <ol class="journal-articles">
+          <br>
+          <h5>2021</h5>
+
+          <li> <strong>Waitt, C.</strong>, Miles, A.R., Schneider, W.F., Adsorbate Free Energies from DFT-Derived Translational Energy Landscapes,
+            <em>The Journal of Physical Chemistry C.</em>, <strong>2021</strong>, <em>125</em>, 37, 20331-20342. 
+            <a class="urls" href="https://pubs.acs.org/doi/10.1021/acs.jpcc.1c05917" target="_blank">doi:10.1021/acs.jpcc.1c05917 </a> 
           </li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-        </ul>
 
-        <h4>Conference Papers</h4>
+          <li> Barboun, P.M., Daemen, L.L., <strong>Waitt, C.</strong>, Wu, Z., Schneider, W.F., Hicks, J.C., Inelastic Neutron Scattering Observation of Plasma-Promoted Nitrogen Reduction Intermediates on Ni/γ-Al<sub>2</sub>O<sub>3</sub>,
+            <em>ACS Energy Letters</em>, <strong>2021</strong>, <em>6</em>, 6, 2048-2053. 
+            <a class="urls" href="https://pubs.acs.org/doi/10.1021/acsenergylett.1c00643" target="_blank">doi:10.1021/acsenergylett.1c00643 </a> 
+          </li>
+
+          <br>
+          <h5>2017</h5>
+
+          <li> Tummalapalli, S.R., Bhat, R., <strong>Waitt, C.</strong>, Eshuis, H., Rotella, D.P., Synthesis and computational analysis of conformationally restricted [3.2. 2]-and [3.2. 1]-3-azabicyclic diamines,
+            <em>Tetrahedron Letters</em>, <strong>2017</strong>, <em>58</em>, 43, 4087-4089. 
+            <a class="urls" href="https://www.sciencedirect.com/science/article/pii/S0040403917311619" target="_blank">doi:10.1016/j.tetlet.2017.09.033 </a> 
+          </li>
+
+          <br>
+          <h5>2016</h5>
+
+          <li> <strong>Waitt, C.</strong>, Ferrara, N.M., Eshuis, H., Thermochemistry and Geometries for Transition-Metal Chemistry from the Random Phase Approximation,
+            <em>The of Chemical Theory and Computation.</em>, <strong>2016</strong>, <em>12</em>, 11, 5350-5360. 
+            <a class="urls" href="https://pubs.acs.org/doi/10.1021/acs.jctc.6b00756" target="_blank">doi:10.1021/acs.jctc.6b00756 </a> 
+          </li>
+
+        </ol>
+
+        <!-- <h4>Conference Papers</h4>
 
         <ul class="publications-published">
           <li>Smith, J., B. Vijay (2019). Title of the conference paper. <em><a class="urls" href="" target="_blank">Conference Proceedings</a>,</em> pp. 1234-1256.</li>
@@ -97,7 +122,9 @@
           <li>Lastname, X. (1999). Conference paper title. <em>Conference Proceedings Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
         </ul>
 
-        <h4>Book Chapters</h4>
+        -->
+
+        <!-- <h4>Book Chapters</h4>
 
         <ul class="publications working-papers">
           <li>Smith, J. K. (2021). Title of Book Chapter. In Johhny Rocket (Ed.), <em>Book Title.</em> ALA, <a class="urls" href="" target="_blank">https://hp.com</a>.</li>
@@ -121,6 +148,8 @@
           <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
           <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
         </ul>
+
+        -->
 
         <h3><span>Selected Conference Presentations</span></h3>
 
@@ -148,7 +177,7 @@
         </dl>
 
 
-        <h3><span>Select Invited Talks</span></h3>
+        <!-- <h3><span>Select Invited Talks</span></h3>
 
         <dl id="invited-talks">
           <dt>Applying X Research Methodology to Y Object of Study</dt>
@@ -160,6 +189,8 @@
           <dt>Applying X Research Methodology to Y Object of Study</dt>
           <dd>Invited workshop/talk/presentation for Group Z, University of East Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
         </dl>
+
+        -->
 
         <!-- Dissertation abstract -->
         <h3><span>Dissertation Abstract</span></h3>
