--- a/index.html
+++ b/index.html
@@ -122,44 +122,44 @@
             Notre Dame.
           </p>
 
-          <div id="carousel-ID" class="carousel slide" data-ride="carousel" data-interval="20000">
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-ID" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-ID" data-slide-to="1"></li>
-            <li data-target="#carousel-ID" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-white">Schneider Group Christmas Party</h5>
-                <p class="text-white">Dec 2021</p>
+          <!-- <div id="carousel-ID" class="carousel slide" data-ride="carousel" data-interval="20000">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-ID" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-ID" data-slide-to="1"></li>
+              <li data-target="#carousel-ID" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <h5 class="text-white">Schneider Group Christmas Party</h5>
+                  <p class="text-white">Dec 2021</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <h5 class="text-white">Schneider Group Christmas Party</h5>
+                  <p class="text-white">Dec 2021</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/personal_img/WFS_July 2021.jpg" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <h5 class="text-white">Schneider Group Summer Party</h5>
+                  <p class="text-white">July 2021</p>
+                </div>
               </div>
             </div>
-            <div class="carousel-item">
-              <img src="./img/personal_img/WFS_Dec_2021.jpg" class="d-block w-100" alt="carousel image">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-white">Schneider Group Christmas Party</h5>
-                <p class="text-white">Dec 2021</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./img/personal_img/WFS_July 2021.jpg" class="d-block w-100" alt="carousel image">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-white">Schneider Group Summer Party</h5>
-                <p class="text-white">July 2021</p>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carousel-ID" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carousel-ID" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div> 
+            <a class="carousel-control-prev" href="#carousel-ID" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-ID" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div> -->
 
         </div>
 
