--- a/research.html
+++ b/research.html
@@ -58,22 +58,65 @@
 
       <div class="col-sm-12">
         <h1 id="page-lead">Research</h1>
+
+          <br>
+
+          <div id="carousel-ID" class="carousel slide" data-ride="carousel" data-interval="7500">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-ID" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-ID" data-slide-to="1"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/research/Free_Energy.png" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <a href="https://pubs.acs.org/doi/10.1021/acs.jpcc.1c05917" target="_blank">
+                    <h5 class="text-white">Adsorbate Free Energies from DFT-Derived Translational Energy
+                      Landscapes </h5>
+                  </a>
+                  <p class="text-white">J. Phys. Chem. C 2021, 125, 37, 20331–20342</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/research/INS.png" class="d-block w-100" alt="carousel image">
+                <div class="carousel-caption d-none d-md-block bg-dark">
+                  <a href="https://pubs.acs.org/doi/10.1021/acsenergylett.1c00643" target="_blank">
+                    <h5 class="text-white">Inelastic Neutron Scattering Observation of 
+                      Plasma-Promoted Nitrogen Reduction Intermediates on Ni/γ-Al<sub>2</sub>O<sub>3</sub> </h5>
+                  </a>
+                  <p class="text-white">ACS Energy Lett. 2021, 6, 6, 2048–2053</p>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-ID" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-ID" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div> 
+
+          <br>
+
+
         <p>My research focuses on atomistic simulations of heterogenous catalysis on metal surfaces and a class of metal organic frameworks called zeolites. I use Density Functional
           Theory (DFT) and statistical mechanics in order to draw connections to and ellucidate experimental observations. 
         </p>
 
-        <!-- <p>My specific research areas include:</p>
+        <p>My specific research areas include:</p>
 
         <div class="col-sm-12">
           <ul id="reseach-bullets">
-            <li>Research area 1</li>
-            <li>Research area 2</li>
-            <li>Research area 3</li>
-            <li>Research area 4</li>
+            <li>Zeolite Synthesis and Catalysis</li>
+            <li>Reactions occuring on Metal Surfaces</li>
+            <li>Plasma-assisted Catalysis</li>
+            <li>Statistical Modeling of Entopic Contributions to Free Energy</li>
           </ul>
-        </div> -->
+        </div>
 
-        <!-- List of Research interests -->
+        <!-- List of Research interests  -->
 
         <!-- Publication -->
 
@@ -154,26 +197,12 @@
         <h3><span>Selected Conference Presentations</span></h3>
 
         <dl id="conference-presentations">
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
-          <dt>Applying X Research Methodology to Y Object of Study</dt>
-          <dd><em>Conference Title</em>, University of West Trickington, San Diego (June 16, 2020)<br><a href="" target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
+          <dt>Moving beyond the Harmonic Oscillator and Hindered Translator Models to Compute Free Energies and Entropies of Surface-bound Species</dt>
+          <dd><em>ACS Spring 2021: American Chemical Society</em>, Virtual Conference (April 15, 2021)<br><a href="https://docs.google.com/presentation/d/1v5TXyqb1zy1LgGsDj_71SkjH23P_fQvn/edit?usp=sharing&ouid=102380082683696503494&rtpof=true&sd=true" 
+            target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
+            <dt>Benchmarking Adsorbate Free Energies and Their Reliability to Determine Equilibrium Constants and Microkinetic Rates</dt>
+            <dd><em>NAM 26: 2019 North American Catalysis Society Meeting</em>, Chicago, Il (June 25, 2019)<br><a href="https://drive.google.com/file/d/1Z8tLTfalcLXS8aPc9a8xXdvooj6lBXL7/view?usp=sharing" 
+              target="_blank"><i class="fa fa-fw fa-file-pdf mr-1"></i>PDF</a></dd>
         </dl>
 
 
@@ -193,36 +222,38 @@
         -->
 
         <!-- Dissertation abstract -->
-        <h3><span>Dissertation Abstract</span></h3>
+
+        <!-- <h3><span>Dissertation Abstract</span></h3>
         <p class="lead"><em>The Problematic of Privacy in the Namespace</em></p>
         <blockquote class="ml-4" id="dissertation-blockquote">
           <i class="fa fa-quote-right fa-flip-horizontal fa-2x float-left mr-3"></i>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut similique ab minus, maxime necessitatibus vitae expedita quos, nostrum ratione temporibus dolorum consequatur blanditiis quia culpa! Fuga illo aliquid, quidem odit?</p>
-
+        -->
 
           <!-- ------------------------------------------------------------------------>
           <!-- Delete this section below if you don't want a read more section -------->
 
-          <div id="read-more">
+          <!-- <div id="read-more">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium dolor quibusdam deleniti architecto ad sequi laborum ipsam tenetur itaque! Hic dolor, atque? Necessitatibus quaerat incidunt illum eos asperiores obcaecati vel maxime unde atque, quod vero itaque veniam expedita ad molestias sunt cupiditate voluptate quo pariatur minima dolores quis, minus qui quia? Molestias aliquid nemo rerum iure quasi error velit ut provident, voluptate laboriosam, ducimus, soluta excepturi repellat minima laudantium optio! Eos veritatis expedita, quibusdam nulla sequi laborum eum iure possimus laudantium odio, dicta officia sint quasi impedit iste veritatis qui, assumenda laborum reprehenderit amet, quia enim.</p>
             <p>Id ratione commodi dolorem aut similique iste a, numquam natus nesciunt aliquid, voluptatibus, architecto velit non cumque distinctio nemo ad sapiente laborum temporibus fuga tempora. Hic eligendi, autem consectetur iure commodi ipsa nam ducimus voluptate, ipsum laboriosam magni, aliquid quia! Ab quas voluptates modi, illo nisi, voluptas aliquam aliquid laboriosam dolore reprehenderit necessitatibus, amet maiores deserunt! Voluptas cumque quo labo voluptatibus eos. Optio cupiditate explicabo est nisi, id, voluptate officiis sapiente sequi! Earum cumque, itaque sint quis voluptatibus et deleniti illum natus, ipsum error nesciunt. Natus ea doloribus impedit quia repellat sit, voluptas laboriosam laborum labore libero mollitia molestiae, repellendus!</p>
           </div>
+        -->
 
           <!-- Delete this section above if you don't want a read more section -------->
           <!-- ------------------------------------------------------------------------>
 
-          <footer>
+          <!-- <footer>
             <hr>
             <cite>
               <i class="fa fa-fw mr-1 fa-file-pdf"></i>Smith, J. K. (2013). <em>Title of Dissertation.</em> (Doctoral dissertation). Retrieved from Some Digital Commons Repository. <a class="urls" href=""
                 target="_blank">(https://hp.com)</a></cite>
           </footer>
-        </blockquote>
+        </blockquote> -->
 
 
         <!-- ------------------------------------------------------------------------>
         <!-- Delete this section below if you don't want a read more section -------->
-        <p class="badge badge-primary pointer mt-1" id="badge-more">More</p>
+        <!-- <p class="badge badge-primary pointer mt-1" id="badge-more">More</p> -->
         <!-- Delete this section above if you don't want a read more section -------->
         <!-- ------------------------------------------------------------------------>
 
