updated Vitae and remove prejects temporarily

--- a/page-navbar.html
+++ b/page-navbar.html
@@ -20,12 +20,12 @@
         <li id="vitae" class="nav-item text-white mr-2">
           <a class="nav-link" href="vitae.html">Vitae</a>
         </li>
-        <li id="projects" class="nav-item text-white mr-2">
+<!--        <li id="projects" class="nav-item text-white mr-2">
           <a class="nav-link" href="projects.html">Projects</a>
-        </li>
-        <li id="blog" class="nav-item text-white mr-2 d-none">
+        </li> --> <!-- Comment until its better developed-->
+<!--        <li id="blog" class="nav-item text-white mr-2 d-none">
           <a class="nav-link" href="blog.html">Blog</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   <!-- </div> -->
