--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
   <!-- Main local styles -->
   <link rel="stylesheet" href="css/main.css">
 
-  <title>Jane Smith, PhD</title>
+  <title>Craig Waitt</title>
 
 </head>
 
@@ -57,7 +57,10 @@
     <div class="row mx-3">
       <div class="col-sm-12">
         <h1>Projects</h1>
-        <p>My recent work has involved {{things I've done}}.</p>
+        <p>Here, you will find the links to various open source projects that I have worked on.
+          For questions or comments regarding anything of these projects please reach out to me
+          <a href="mailto:waitt.craig@gmail.com">here</a>.
+        </p>
       </div>
       <!-- col-sm-12 -->
 
@@ -85,16 +88,10 @@
           All
         </button>
         <button id="type1" class="btn btn-sm btn-primary mr-3">
-          Web
+          Workshops
         </button>
         <button id="type2" class="btn btn-sm btn-primary mr-3">
-          Design
-        </button>
-        <button id="type3" class="btn btn-sm btn-primary mr-3">
-          Games
-        </button>
-        <button id="type4" class="btn btn-sm btn-primary mr-3">
-          Tutorials
+          Python Tools
         </button>
 
 
