--- a/vitae.html
+++ b/vitae.html
@@ -61,9 +61,15 @@
 
         <p>Find my current curriculum vitae below. References available upon request.</p>
 
-        <p class='text-right'><a href='https://drive.google.com/file/d/1hzXfuj7-RFnVxOTU7iFf4MeBYI-xlbCP/view?usp=sharing' aria-hidden='true'></i>&nbsp;Print Vitae</a></p>
-        <iframe id="vitae-iframe" width='100%' height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item' src='https://drive.google.com/file/d/1hzXfuj7-RFnVxOTU7iFf4MeBYI-xlbCP/view?usp=sharing' allowfullscreen>
-        </iframe>
+        <div class="embed-responsive" style="height: 1250px;">
+          <object class="embed-responsive-item" data="./docs/CV.pdf"
+             type="application/pdf" internalinstanceid="9" title="">
+             <p>
+                Your browser isn't supporting embedded pdf files. You can download the file
+                <a href="https://drive.google.com/file/d/1hzXfuj7-RFnVxOTU7iFf4MeBYI-xlbCP/view?usp=sharingf">here</a>
+             </p>
+          </object>
+       </div>
 
       </div>
     </div>
