Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <p>I am a Ph.D. Candidate for 
           <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a> at the University of Notre Dame. 
-          Our research primarily focuses on problems related to catalyis in zeolites and on metal surfaces.
+          Our research primarily focuses on problems related to catalysis in zeolites and on metal surfaces.
           We develop atomistic models in order to help and lead discussions with our experimental collaborators.
           My research is specifically focused on studying the interactions between templating molecules and zeolites
           in order to understand why certain zeolite phases and zeolite compositions are experimentally observed.
@@ -115,10 +115,10 @@
         <div id="read-more">
 
           <p>Beyond my duties as a graduate research student, I am passionate about teaching and pedagogy. In 2021,
-            I was award a fellowship at the University of Notre Dame for the Navari Family Center for Digital Scholarship (NFCDS).
+            I was awarded a fellowship at the University of Notre Dame for the Navari Family Center for Digital Scholarship (NFCDS).
             The NFCDS leverages state-of-the art technologies, enabling students and faculty to explore new methodologies, 
             analyze complex data and share research results in ways never before possible. During my tenure as a NFCDS fellow,
-            I designed and facillitated workshops open to students, faculty, and staff at the University of
+            I designed and facilitated workshops open to students, faculty, and staff at the University of
             Notre Dame.
           </p>
 
