--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@
 
 
         <p>My research focuses on atomistic simulations of heterogenous catalysis on metal surfaces and a class of metal organic frameworks called zeolites. I use Density Functional
-          Theory (DFT) and statistical mechanics in order to draw connections to and ellucidate experimental observations. 
+          Theory (DFT) and statistical mechanics in order to draw connections to and elucidate experimental observations. 
         </p>
 
         <p>My specific research areas include:</p>
