--- a/teaching.html
+++ b/teaching.html
@@ -59,18 +59,15 @@
       <div class="col-sm-12">
         <h1 id="page-lead">Teaching</h1>
 
-        <p> My philosophy of education is that all students have unqiue perspectives and must have
-          a stimulating educational environment where they can grow mentally, emotionally, and socially.
-          It is my responsibilty as a teacher to create an inclusive enviornment that promotes
-          not only the learning of the content-matter related to the course, but also critcal thinking skills
-          that students can apply in other aspects of their lives. 
+        <p> My philosophy of education is that all students have unique perspectives and must have a stimulating educational 
+          environment where they can grow mentally, emotionally, and socially. It is my responsibility as a teacher to create 
+          an inclusive environment that promotes not only the learning of the content-matter related to the course, but also 
+          critical thinking skills that students can apply in other aspects of their lives. 
         </p>
 
-        <p> Education is a process of teaching to your students, and learning from your students. 
-          This is a life-long process of learning new strategies, ideas, and philosophies. I beleive 
-          in order to be a sucessful teacher, you need to be able to navigate around this delicate
-          banlance of instructing and being instructed.
-
+        <p> Education is a process of teaching to your students, and learning from your students. This is a life-long process 
+          of learning new strategies, ideas, and philosophies. I believe in order to be a successful teacher, you need to be 
+          able to navigate around this delicate balance of instructing and being instructed.
         </p>
 
         <!-- <p>For more on my pedagogical approach, please see my <a href="" target="_blank">Teaching Philosophy</a>.</p> -->
