added photos and added link to workshop

--- a/teaching.html
+++ b/teaching.html
@@ -208,6 +208,9 @@
                   figures, tables, and mathematical equations that you can adapt for research
                   and publication.
                 </p>
+
+                <a href="https://github.com/cwaitt/Latex-Workshop" 
+            target="_blank"><i class="fa fa-fw fa-github mr-1"></i>Link to Workshop</a>
               </div>
             </div>
           </div>
