--- a/teaching.html
+++ b/teaching.html
@@ -209,8 +209,11 @@
                   and publication.
                 </p>
 
-                <a href="https://github.com/cwaitt/Latex-Workshop" 
-            target="_blank"><i class="fa fa-fw fa-github mr-1"></i>Link to Workshop</a>
+                <!-- <a href="https://github.com/cwaitt/Latex-Workshop" 
+                  target="_blank"><i class="fa fa-fw fa-github mr-1"></i>Link to Workshop</a>
+                <br>
+                <a href="https://www.youtube.com/watch?v=sWoKHuA1Mfs" 
+                  target="_blank"><i class="fa fa-fw fa-youtube-play mr-1"></i>Link to Video</a> -->
               </div>
             </div>
           </div>
