--- a/research.html
+++ b/research.html
@@ -197,6 +197,12 @@
         <h3><span>Selected Conference Presentations</span></h3>
 
         <dl id="conference-presentations">
+          <dt>Exploring the Relationship Between Organic Structure Directing Agents and Al Distribution in CHA</dt>
+          <dd><em>ACS Fall 2022: American Chemical Society</em>, Chicago, Il (August 24, 2022)<br><a href="https://docs.google.com/presentation/d/15BVR-LH-mKX7HIri8sbyyT74xjoYBO9r/edit?usp=sharing&ouid=102380082683696503494&rtpof=true&sd=true" 
+            target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
+          <dt>Exploring the Relationship Between Organic Structure Directing Agents and Al Distribution in CHA</dt>
+          <dd><em>NAM 27: 2022 North American Catalysis Society Meeting</em>, New York, NY (May 23, 2022)<br><a href="https://drive.google.com/file/d/1Qa9cQd_WE7w3zpTfDlkb7JnTIP2VtjN9/view?usp=sharing" 
+            target="_blank"><i class="fa fa-fw fa-file-pdf mr-1"></i>PDF</a></dd>
           <dt>Moving beyond the Harmonic Oscillator and Hindered Translator Models to Compute Free Energies and Entropies of Surface-bound Species</dt>
           <dd><em>ACS Spring 2021: American Chemical Society</em>, Virtual Conference (April 15, 2021)<br><a href="https://docs.google.com/presentation/d/1v5TXyqb1zy1LgGsDj_71SkjH23P_fQvn/edit?usp=sharing&ouid=102380082683696503494&rtpof=true&sd=true" 
             target="_blank"><i class="fa fa-fw fa-file-powerpoint mr-1"></i>Slides</a></dd>
