--- a/research.html
+++ b/research.html
@@ -128,12 +128,18 @@
           <br>
           <h5>2021</h5>
 
-          <li> <strong>Waitt, C.</strong>, Miles, A.R., Schneider, W.F., Adsorbate Free Energies from DFT-Derived Translational Energy Landscapes,
+          <li> Yan, C., <strong>Waitt, C.</strong>, Akintola, I., Lee, G., Easa, J., Clarke, R., Geng, F., Poirier, D., Otor, H. O., Rivera-Castro, G.,
+            Go, D. B., O’Brien, C. P., Hicks, J. C., Schneider, W. F. & Ma, H., Recent Advances in Plasma Catalysis,
+            <em>Industrial & Engineering Chemistry Research</em>, <strong>2022</strong>, <em>61</em>, 23, 7675–7678. 
+            <a class="urls" href="https://pubs.acs.org/doi/10.1021/acs.iecr.2c01594" target="_blank">doi:10.1021/acs.iecr.2c01594 </a> 
+          </li>
+
+          <li> <strong>Waitt, C.</strong>, Miles, A.R., Schneider, W. F., Adsorbate Free Energies from DFT-Derived Translational Energy Landscapes,
             <em>The Journal of Physical Chemistry C.</em>, <strong>2021</strong>, <em>125</em>, 37, 20331-20342. 
             <a class="urls" href="https://pubs.acs.org/doi/10.1021/acs.jpcc.1c05917" target="_blank">doi:10.1021/acs.jpcc.1c05917 </a> 
           </li>
 
-          <li> Barboun, P.M., Daemen, L.L., <strong>Waitt, C.</strong>, Wu, Z., Schneider, W.F., Hicks, J.C., Inelastic Neutron Scattering Observation of Plasma-Promoted Nitrogen Reduction Intermediates on Ni/γ-Al<sub>2</sub>O<sub>3</sub>,
+          <li> Barboun, P.M., Daemen, L.L., <strong>Waitt, C.</strong>, Wu, Z., Schneider, W. F., Hicks, J.C., Inelastic Neutron Scattering Observation of Plasma-Promoted Nitrogen Reduction Intermediates on Ni/γ-Al<sub>2</sub>O<sub>3</sub>,
             <em>ACS Energy Letters</em>, <strong>2021</strong>, <em>6</em>, 6, 2048-2053. 
             <a class="urls" href="https://pubs.acs.org/doi/10.1021/acsenergylett.1c00643" target="_blank">doi:10.1021/acsenergylett.1c00643 </a> 
           </li>
