update job title, pictures, and CV

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
       <div class="col-sm-8 px-4">
 
-        <h1>Craig Waitt</h1>
+        <h1>Craig Waitt, Ph. D.</h1>
 
-        <p class="position-title mt-2 mb-1">Ph.D. Candidate, University of Notre Dame</p>
+        <p class="position-title mt-2 mb-1">Postdoctoral Fellow, University of Notre Dame</p>
        <!-- <p class="position-title mt-0 mb-4">Optional Second Title, School or Organization</p> -->
 
-        <p>I am a Ph.D. Candidate for 
+        <p>I am a postdoctoral fellow for 
           <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a> at the University of Notre Dame. 
           Our research primarily focuses on problems related to catalysis in zeolites and on metal surfaces.
           We develop atomistic models in order to help and lead discussions with our experimental collaborators.
@@ -114,7 +114,7 @@
         <!-- Delete this section below if you don't want a read more section -------->
         <div id="read-more">
 
-          <p>Beyond my duties as a graduate research student, I am passionate about teaching and pedagogy. In 2021,
+          <p>Beyond my duties as a postdoctoral fellow, I am passionate about teaching and pedagogy. In 2021,
             I was awarded a fellowship at the University of Notre Dame for the Navari Family Center for Digital Scholarship (NFCDS).
             The NFCDS leverages state-of-the art technologies, enabling students and faculty to explore new methodologies, 
             analyze complex data and share research results in ways never before possible. During my tenure as a NFCDS fellow,
@@ -124,6 +124,20 @@
 
           <h3><span>Photos</span></h3>
 
+          <div class="row">
+            <div class="col">
+              <img src="./img/personal_img/WFS_Dec_2022.jpg" class="img-fluid mx-auto d-block border-0 rounded-lg ">
+              <p>  </p>
+              <div class="caption text-center">
+                <h5>Schneider Group Christmas Party (Dec 2022)</h5>
+              </div>
+
+            </div>
+          </div>
+    
+          <br>
+          <br>
+          <br>
 
           <div class="row">
             <div class="col">
@@ -145,7 +159,7 @@
               <img src="./img/personal_img/WFS_Dec_2021.jpg" class="img-fluid mx-auto d-block border-0 rounded-lg ">
               <p>  </p>
               <div class="caption text-center">
-                <h5>Schneider Group Christmas Party (December 2021)</h5>
+                <h5>Schneider Group Christmas Party (Dec 2021)</h5>
               </div>
 
             </div>
@@ -179,7 +193,7 @@
 
         <ul id="education" class="list-group">
           <li class="list-group-item">
-            <p><strong>Ph.D., Chemistry (ongoing)</strong><br>
+            <p><strong>Ph.D., Chemistry </strong><br>
               <span class="university">University of Notre Dame, Notre Dame, IN</span>
             </p>
           </li>
