--- a/index.html
+++ b/index.html
@@ -100,26 +100,39 @@
         <p class="position-title mt-2 mb-1">Postdoctoral Fellow, University of Notre Dame</p>
        <!-- <p class="position-title mt-0 mb-4">Optional Second Title, School or Organization</p> -->
 
-        <p>I am a postdoctoral fellow for 
-          <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a> at the University of Notre Dame. 
-          Our research primarily focuses on problems related to catalysis in zeolites and on metal surfaces.
-          We develop atomistic models in order to help and lead discussions with our experimental collaborators.
-          My research is specifically focused on studying the interactions between templating molecules and zeolites
-          in order to understand why certain zeolite phases and zeolite compositions are experimentally observed.
-          My previous experience has been centered on developing modules to evaluate entropic contributions to the 
-          free energy of adsorbates on metal surfaces, and benchmarking post-Hartree Fock and Density Functional Theory
-          methods in transition metal complexes. </p>        
+        <p>Hello! My name is Craig Waitt and I am a postdoctoral researcher as a 
+          computational chemist at the University of Notre Dame. I received my PhD 
+          from the University of Notre Dame, where I worked under the guidance of 
+          Professor <a href="https://wfschneidergroup.github.io/" target="_blank">William Schneider</a>. 
+          My research focuses on the stability of heterogenous catalysts and the reactions 
+          occurring in zeolites and on surfaces. As a computational chemist, I use advanced
+          computer modeling and simulation techniques, particularly Density Functional 
+          Theory (DFT), to understand and predict the behavior of molecules and materials 
+          at the atomic level. I am grateful for the opportunity to continue my research 
+          journey as a postdoc under the mentorship of Professor Schneider, and am excited 
+          to contribute to the advancement of science and technology through my work. 
+          Thank you for visiting my website!
+        </p>        
 
         <!-- ------------------------------------------------------------------------>
         <!-- Delete this section below if you don't want a read more section -------->
         <div id="read-more">
 
-          <p>Beyond my duties as a postdoctoral fellow, I am passionate about teaching and pedagogy. In 2021,
-            I was awarded a fellowship at the University of Notre Dame for the Navari Family Center for Digital Scholarship (NFCDS).
-            The NFCDS leverages state-of-the art technologies, enabling students and faculty to explore new methodologies, 
-            analyze complex data and share research results in ways never before possible. During my tenure as a NFCDS fellow,
-            I designed and facilitated workshops open to students, faculty, and staff at the University of
-            Notre Dame.
+          <p>In addition to my research, I am also passionate about teaching and pedagogy. 
+            I believe that education has the power to transform lives and am dedicated to 
+            helping students of all ages and backgrounds to achieve their full potential. 
+            I have had the opportunity to teach a variety of chemistry courses at the 
+            undergraduate level, and have received positive feedback from my students for 
+            my ability to clearly explain complex concepts and make chemistry engaging 
+            and accessible. I am proud to have received recognition for my teaching 
+            efforts, including winning teaching awards at the University of Notre Dame. 
+            In addition to my work in the classroom, I also enjoy being a mentor to 
+            students, helping them to develop the skills and confidence they need to 
+            succeed in their academic and professional pursuits. I am always looking for 
+            ways to improve my teaching practice and stay up to date with the latest 
+            developments in education. I hope to continue to make a positive impact on 
+            the next generation of scientists and educators through my teaching and 
+            research.
           </p>
 
           <h3><span>Photos</span></h3>
