--- a/teaching.html
+++ b/teaching.html
@@ -59,15 +59,41 @@
       <div class="col-sm-12">
         <h1 id="page-lead">Teaching</h1>
 
-        <p> My philosophy of education is that all students have unique perspectives and must have a stimulating educational 
-          environment where they can grow mentally, emotionally, and socially. It is my responsibility as a teacher to create 
-          an inclusive environment that promotes not only the learning of the content-matter related to the course, but also 
-          critical thinking skills that students can apply in other aspects of their lives. 
+        <p> As an educator, I believe that all students have the right to a 
+          high-quality education and the opportunity to achieve their full 
+          potential. I believe that it is my responsibility to create a safe, 
+          inclusive, and supportive learning environment where students feel 
+          welcomed and valued, and where they can grow mentally, emotionally, 
+          and socially. To do this, I strive to create a positive and respectful 
+          classroom culture where students feel comfortable taking risks and 
+          trying new things.
         </p>
 
-        <p> Education is a process of teaching to your students, and learning from your students. This is a life-long process 
-          of learning new strategies, ideas, and philosophies. I believe in order to be a successful teacher, you need to be 
-          able to navigate around this delicate balance of instructing and being instructed.
+        <p> I believe in the power of differentiated instruction and the 
+          importance of tailoring my teaching to meet the unique needs and 
+          abilities of each student. I use a variety of teaching methods and 
+          strategies to ensure that all students have the opportunity to learn 
+          in a way that is meaningful and engaging to them. I encourage my 
+          students to be active participants in their own learning and provide 
+          them with the guidance and resources they need to take ownership of 
+          their education.
+        </p>
+          
+        <p> Building strong relationships with my students is also key to their 
+          success. I believe that it is important to get to know my students as 
+          individuals and to create a classroom community where students feel 
+          supported and valued. I strive to create a positive and respectful 
+          classroom culture where students feel comfortable asking questions, 
+          seeking help, and expressing their ideas.
+        </p>
+          
+        <p> Overall, my teaching philosophy is centered on fostering a love of 
+          learning in my students and empowering them to become curious, 
+          confident, and capable learners who are prepared to tackle the 
+          challenges of the 21st century. I believe that it is my role as an 
+          educator to help students develop the skills and knowledge they need 
+          to succeed in school and beyond, and I am committed to doing all that 
+          I can to help my students reach their full potential.
         </p>
 
         <!-- <p>For more on my pedagogical approach, please see my <a href="" target="_blank">Teaching Philosophy</a>.</p> -->
